--- a/base/build.gradle
+++ b/base/build.gradle
@@ -17,6 +17,9 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
