--- a/mine/build.gradle
+++ b/mine/build.gradle
@@ -1,11 +1,19 @@
-apply plugin: 'com.android.library'
-
+def global = parent.ext.global
+def isMineModule = global.isMineModule.toBoolean()
+if (isMineModule) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
 def config = parent.ext.android
 
 android {
     compileSdkVersion config.compileSDKVersion
     buildToolsVersion config.buildToolsVersion
     defaultConfig {
+        if (isMineModule) {
+            applicationId "com.felix.mine"
+        }
         minSdkVersion config.minSDKVersion
         targetSdkVersion config.targetSDKVersion
         javaCompileOptions {
@@ -18,10 +26,23 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    dataBinding {
+        enabled true
+    }
+    sourceSets {
+        main {
+            if (isMineModule) {
+                manifest.srcFile 'src/main/module/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            }
+        }
+    }
 }
 
 dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':base')
 }
