--- a/deps/build.gradle
+++ b/deps/build.gradle
@@ -77,5 +77,9 @@ dependencies {
     api configDependencies.qmui
     api configDependencies.qmui_arch
 
+    api configDependencies.utilcode
+
+    api configDependencies.banner
+
     api project(':annotation')
 }
