--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':base', ':main', ':other', ':mine', ':apt', ':annotation', ':deps'
+include ':app', ':base', ':main', ':know', ':mine', ':apt', ':annotation', ':deps', ':nav'
