--- a/know/build.gradle
+++ b/know/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':base')
+
+    // 自动生成网络请求代码
+    annotationProcessor project(':apt')
 }
